ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/LoanApplicationAsset__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Loan_Application_Asset_Compact_Layout</compactLayoutAssignment>
    <label>Loan Application Asset</label>
    <nameField>
        <label>Loan Application Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>