ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/AssetClass__c.field-meta.xml
<CustomField>
    <fullName>AssetClass__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>