ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/AssetSavingsAndDepositsType__c.field-meta.xml
<CustomField>
    <fullName>AssetSavingsAndDepositsType__c</fullName>
    <label>Asset Savings And Deposits Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssetSavingsAndDepositsType</valueSetName>
    </valueSet>
</CustomField>