ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/AssetSuperannuationType__c.field-meta.xml
<CustomField>
    <fullName>AssetSuperannuationType__c</fullName>
    <label>Asset Superannuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssetSuperannuationType</valueSetName>
    </valueSet>
</CustomField>