ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssetTypes</valueSetName>
    </valueSet>
</CustomField>