ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/AssetVehicleType__c.field-meta.xml
<CustomField>
    <fullName>AssetVehicleType__c</fullName>
    <label>Asset Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssetVehicleType</valueSetName>
    </valueSet>
</CustomField>