ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/BasePhotoURL__c.field-meta.xml
<CustomField>
    <fullName>BasePhotoURL__c</fullName>
    <label>Base Photo URL</label>
    <type>Url</type>
</CustomField>