ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/CarSpaces__c.field-meta.xml
<CustomField>
    <fullName>CarSpaces__c</fullName>
    <label>Car Spaces</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>