ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/CashOrMarketValue__c.field-meta.xml
<CustomField>
    <fullName>CashOrMarketValue__c</fullName>
    <label>Cash Or Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>