ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/CommercialPropertyType__c.field-meta.xml
<CustomField>
    <fullName>CommercialPropertyType__c</fullName>
    <label>Commercial Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PropertyCommercialTypes</valueSetName>
    </valueSet>
</CustomField>