ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/CoreLogicPropertyId__c.field-meta.xml
<CustomField>
    <fullName>CoreLogicPropertyId__c</fullName>
    <label>Core Logic Property Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>