ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/CoreLogicPropertyImage__c.field-meta.xml
<CustomField>
    <fullName>CoreLogicPropertyImage__c</fullName>
    <formula
  >if(BasePhotoURL__c != &apos;&apos;, IMAGE(BasePhotoURL__c,&apos;&apos;, 500,800), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Logic Property Image</label>
    <type>Text</type>
</CustomField>