ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/CurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentBalance__c</fullName>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>