ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/GrossMonthlyRentalIncome__c.field-meta.xml
<CustomField>
    <fullName>GrossMonthlyRentalIncome__c</fullName>
    <description
  >Borrower&apos;s monthly rent income collected on real estate asset</description>
    <label>Gross Monthly Rental Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>