ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/HasMortgage__c.field-meta.xml
<CustomField>
    <fullName>HasMortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Mortgage</label>
    <type>Checkbox</type>
</CustomField>