ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/Institution_or_Description__c.field-meta.xml
<CustomField>
    <fullName>Institution_or_Description__c</fullName>
    <label>Institution or Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>