ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/IsJointAsset__c.field-meta.xml
<CustomField>
    <fullName>IsJointAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Joint Asset</label>
    <type>Checkbox</type>
</CustomField>