ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/isPropertyYouLiveIn__c.field-meta.xml
<CustomField>
    <fullName>isPropertyYouLiveIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Property You Live In</label>
    <type>Checkbox</type>
</CustomField>