ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/isSecurityForLoanFinancingIt__c.field-meta.xml
<CustomField>
    <fullName>isSecurityForLoanFinancingIt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Security For Loan Financing It</label>
    <type>Checkbox</type>
</CustomField>