ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/isSecurityForNewLoan__c.field-meta.xml
<CustomField>
    <fullName>isSecurityForNewLoan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Security For New Loan</label>
    <type>Checkbox</type>
</CustomField>