ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/LandArea__c.field-meta.xml
<CustomField>
    <fullName>LandArea__c</fullName>
    <label>Land Area</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>