ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/loanOriginalTerm__c.field-meta.xml
<CustomField>
    <fullName>loanOriginalTerm__c</fullName>
    <inlineHelpText>in years</inlineHelpText>
    <label>loan Original Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>