ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/LockUpGarages__c.field-meta.xml
<CustomField>
    <fullName>LockUpGarages__c</fullName>
    <label>Lock Up Garages</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>