ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Vehicle Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicles</valueSetName>
    </valueSet>
</CustomField>