ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/Motorcycles__c.field-meta.xml
<CustomField>
    <fullName>Motorcycles__c</fullName>
    <label>Motorcycles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Motorcycles</valueSetName>
    </valueSet>
</CustomField>