ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>