ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/PropertyIntention__c.field-meta.xml
<CustomField>
    <fullName>PropertyIntention__c</fullName>
    <label>Property Intention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AssetPropertyIntention</valueSetName>
    </valueSet>
</CustomField>