ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/PropertyisRented__c.field-meta.xml
<CustomField>
    <fullName>PropertyisRented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property is Rented</label>
    <type>Checkbox</type>
</CustomField>