ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/PropertyPreTaxExpensesRent__c.field-meta.xml
<CustomField>
    <fullName>PropertyPreTaxExpensesRent__c</fullName>
    <label>Property Pre Tax Expenses Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>