ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/propertySaleFinalisedBeforeNewPurchase__c.field-meta.xml
<CustomField>
    <fullName>propertySaleFinalisedBeforeNewPurchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sale Finalised Before New Purchase</label>
    <type>Checkbox</type>
</CustomField>