ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PropertyTypes</valueSetName>
    </valueSet>
</CustomField>