ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/PropertyWantsToRefinanceMortgage__c.field-meta.xml
<CustomField>
    <fullName>PropertyWantsToRefinanceMortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Wants To Refinance Mortgage</label>
    <type>Checkbox</type>
</CustomField>