ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/Propertywillberented__c.field-meta.xml
<CustomField>
    <fullName>Propertywillberented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property will be rented</label>
    <type>Checkbox</type>
</CustomField>