ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/RequestPropertyReport__c.field-meta.xml
<CustomField>
    <fullName>RequestPropertyReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Property Report</label>
    <type>Checkbox</type>
</CustomField>