ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/RequestRentalEstimate__c.field-meta.xml
<CustomField>
    <fullName>RequestRentalEstimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Rental Estimate</label>
    <type>Checkbox</type>
</CustomField>