ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/RequestSuburbReport__c.field-meta.xml
<CustomField>
    <fullName>RequestSuburbReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Suburb Report</label>
    <type>Checkbox</type>
</CustomField>