ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/ResidentialLoanApplication__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Loan Application Assets</relationshipLabel>
    <relationshipName>Loan_Application_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>