ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/ResidentialPropertyType__c.field-meta.xml
<CustomField>
    <fullName>ResidentialPropertyType__c</fullName>
    <label>Residential Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PropertyResidentialTypes</valueSetName>
    </valueSet>
</CustomField>