ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Campervan or motorhome</fullName>
            </value>
            <value>
                <fullName>Light trailer or caravan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>