ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/SplitLoan__c.field-meta.xml
<CustomField>
    <fullName>SplitLoan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Loan</label>
    <type>Checkbox</type>
</CustomField>