ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motor vehicle</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>