ctm-sf-homeloan-app/main/default/objects/LoanApplicationAsset__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>If( ISPICKVAL( VerificationStatus__c , &quot;Verified&quot;), IMAGE(&quot;https://comparethemarket--partial.sandbox.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681m000000Kxc4&amp;operationContext=CHATTER&amp;contentId=05T1m000001Qbex&quot;,&quot;Verified&quot;,18,18),

If( ISPICKVAL( VerificationStatus__c , &quot;Unverified&quot;), IMAGE(&quot;https://comparethemarket--partial.sandbox.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681m000000KxcT&amp;operationContext=CHATTER&amp;contentId=05T1m000001Qbfl&quot;,&quot;Unverified&quot;, 18,18),
 
If( ISPICKVAL( VerificationStatus__c , &quot;Rejected&quot;), IMAGE(&quot;https://comparethemarket--partial.sandbox.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681m000000KxcO&amp;operationContext=CHATTER&amp;contentId=05T1m000001Qbfg&quot;,&quot;Rejected&quot;,18,18),
&apos;&apos;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified</label>
    <type>Text</type>
</CustomField>